--- a/views/damas.html
+++ b/views/damas.html
@@ -50,6 +50,14 @@
                         <li><a href="/views/construccion.html">Opción 2</a></li>
                     </ul>
                 </li>
+                <li>
+                    <div class="search">
+                        <form action="/views/construccion.html">
+                            <input type="text" placeholder="Buscar..." name="search">
+                            <button type="submit">Buscar</button>
+                        </form>
+                    </div> 
+                </li>
             </ul>
         </nav>
 
