--- a/styles/caballeros.css
+++ b/styles/caballeros.css
@@ -67,6 +67,33 @@
         display: block;
     }
 }
+
+.search{
+    margin: 1%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.search input[type="text"]{
+    width: 50%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.search button{
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+
 h1{
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
