--- a/views/index.html
+++ b/views/index.html
@@ -49,8 +49,19 @@
                         <li><a href="/views/construccion.html">Opción 2</a></li>
                     </ul>
                 </li>
+                <li>
+                    <div class="search">
+                        <form action="/views/construccion.html">
+                            <input type="text" placeholder="Buscar..." name="search">
+                            <button type="submit">Buscar</button>
+                        </form>
+                    </div> 
+                </li>
             </ul>
         </nav>
+
+        
+
         
         <div class="bread">
             <nav aria-label="breadcrumb">
