--- a/styles/footer.css
+++ b/styles/footer.css
@@ -3,6 +3,29 @@ a{
     color: black;
 }
 
+.search{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.search input[type="text"]{
+    width: 42ch;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.search button{
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    cursor: pointer;
+}
+
 h1{
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
@@ -19,6 +42,7 @@ h3{
     font-family: 'Courier New', Courier, monospace;
     font-size: 2rem;
 }
+
 p{
     font-family: 'Courier New', Courier, monospace;
     font-size: 1.5rem;
