CAMBIOS DISEÑO FOOTER

--- a/styles/ofertas.css
+++ b/styles/ofertas.css
@@ -157,6 +157,8 @@ th {
     font-size:1.0em;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
+    display: flex;
+    justify-content: center;
 }
     
 .footer .row a{
