--- a/styles/productosNuevos.css
+++ b/styles/productosNuevos.css
@@ -179,6 +179,8 @@ th {
     color:rgb(0, 0, 0);
     font-size:1.0em;
     font-family: 'Courier New', Courier, monospace;
+    display: flex;
+    justify-content: center;
     }
     
     .footer .row a{
