Boton de inicio yregistro

--- a/views/index.html
+++ b/views/index.html
@@ -57,7 +57,15 @@
                         </form>
                     </div> 
                 </li>
+                <li> 
+                 <button onclick="window.location.href='/views/Formulario.html';" class="btn btn-outline-dark">
+                    Iniciar Sesión
+                </button>
+            </li>   
             </ul>
+
+        
+            
         </nav>
 
         
