--- a/views/construccion.html
+++ b/views/construccion.html
@@ -49,6 +49,11 @@
                         <li><a href="/views/construccion.html">Opción 2</a></li>
                     </ul>
                 </li>
+                <li> 
+                    <button onclick="window.location.href='/views/Formulario.html';" class="btn btn-outline-dark">
+                        Registro
+                    </button>
+                </li>
             </ul>
         </nav>
 
