--- a/views/index.html
+++ b/views/index.html
@@ -58,10 +58,10 @@
                     </div> 
                 </li>
                 <li> 
-                 <button onclick="window.location.href='/views/Formulario.html';" class="btn btn-outline-dark">
-                    Iniciar Sesión
-                </button>
-            </li>   
+                    <button onclick="window.location.href='/views/Formulario.html';" class="btn btn-outline-dark">
+                        Registro
+                    </button>
+                </li>   
             </ul>
 
         
