--- a/views/productosNuevos.html
+++ b/views/productosNuevos.html
@@ -57,6 +57,11 @@
                         </form>
                     </div> 
                 </li>
+                <li> 
+                    <button onclick="window.location.href='/views/Formulario.html';" class="btn btn-outline-dark">
+                        Registro
+                    </button>
+                </li>
             </ul>
         </nav>
         
