--- a/views/construccion.html
+++ b/views/construccion.html
@@ -77,14 +77,43 @@
         <h3>Estamos trabajando para brindarte la mejor experiencia posible.</h3>
     </section>
     <footer>
+        <!-- Caja de comentarios -->
+
+        <div class="seccioncomentario">
+
+            <form class="nombrecomentario">
+                <h3 class="entcomentario">Nombre*</h3>
+                <div class="form-group">
+                    <textarea class="form-control" rows="1"></textarea>
+                </div>
+            </form>
+
+            <br><br>
+
+            <form class="cajacomentario">
+                <h3 class="entcomentario">Ingrese un comentario*</h3>
+                <div class="form-group">
+                <textarea class="form-control" rows="5"></textarea>
+                </div>
+                <br>
+                <button type="submit" class="btn btn-primary">Enviar comentario</button>
+            </form>
+
+        </div>
+
+    <!-- Fin caja de comentarios -->
+
         <div class="footer">
         <div class="row">
             <ul>
-                <li><a href="/viewsFooter/politica.html#contacto">Contacto</a></li>
-                <li><a href="/viewsFooter/privacidad.html">Privacidad</a></li>
-                <li><a href="/viewsFooter/politica.html">Politica de Empresa</a></li>
-                <li><a href="/viewsFooter/terminos.html">Terminos y Condiciones</a></li>
-                <li><a href="/viewsFooter/carrera.html">Carrera</a></li>
+                <ul>
+                    <li><a href="/viewsFooter/politica.html#contacto">Contacto</a></li>
+                    <li><a href="/viewsFooter/privacidad.html">Privacidad</a></li>
+                    <li><a href="/viewsFooter/politica.html">Politica de Empresa</a></li>
+                    <li><a href="/viewsFooter/terminos.html">Terminos y Condiciones</a></li>
+                    <li><a href="/viewsFooter/carrera.html">Carrera</a></li>
+                    <li><a href="/viewsFooter/menusitio.html">Menu de Sitio</a></li>
+                </ul>
             </ul>
         </div>
             
@@ -93,6 +122,13 @@
         </div>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    
+    <!-- Script caja de comentarios -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Fin script caja de comentarios -->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
