--- a/views/caballeros.html
+++ b/views/caballeros.html
@@ -160,7 +160,7 @@
         </div>
             
         <div class="row">
-        AROMAS Copyright © 2025 AROMAS - All rights reserved || Designed By: Baruc 
+        AROMAS Copyright © 2025 AROMAS - All rights reserved || Designed By: INGE
         </div>
         </div>
     </footer>
