--- a/styles/comentario.css
+++ b/styles/comentario.css
@@ -11,8 +11,15 @@
     margin-left: 10%;
 }
 
+.titulocomentario{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 30px;
+    font-weight: bolder;
+    margin-left: 10%;
+}
+
 .entcomentario{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     font-size: 20px;
     font-weight: bolder;
 }
