--- a/views/productosNuevos.html
+++ b/views/productosNuevos.html
@@ -115,8 +115,21 @@
 
         <div class="seccioncomentario">
 
+            <h2 class="titulocomentario">Contáctenos</h2>
+
+            <br><br>
+
             <form class="nombrecomentario">
                 <h3 class="entcomentario">Nombre*</h3>
+                <div class="form-group">
+                    <textarea class="form-control" rows="1"></textarea>
+                </div>
+            </form>
+
+            <br><br>
+
+            <form class="nombrecomentario">
+                <h3 class="entcomentario">Correo electrónico*</h3>
                 <div class="form-group">
                     <textarea class="form-control" rows="1"></textarea>
                 </div>
