--- a/views/sesion.html
+++ b/views/sesion.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="/styles/comentario.css">
     <link rel="shortcut icon" href="/img/icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Inicio</title>
@@ -116,6 +117,46 @@
     </section>
 
     <footer id="footer">
+
+        <!-- Caja de comentarios -->
+
+        <div class="seccioncomentario">
+
+            <h2 class="titulocomentario">Contáctenos</h2>
+
+            <br><br>
+
+            <form class="nombrecomentario">
+                <h3 class="entcomentario">Nombre*</h3>
+                <div class="form-group">
+                    <textarea class="form-control" rows="1"></textarea>
+                </div>
+            </form>
+
+            <br><br>
+
+            <form class="nombrecomentario">
+                <h3 class="entcomentario">Correo electrónico*</h3>
+                <div class="form-group">
+                    <textarea class="form-control" rows="1"></textarea>
+                </div>
+            </form>
+
+            <br><br>
+
+            <form class="cajacomentario">
+                <h3 class="entcomentario">Ingrese un comentario*</h3>
+                <div class="form-group">
+                <textarea class="form-control" rows="5"></textarea>
+                </div>
+                <br>
+                <button type="submit" class="btn btn-primary">Enviar comentario</button>
+            </form>
+
+        </div>
+
+    <!-- Fin caja de comentarios -->
+
         <div class="footer">
         <div class="row">
             <ul>
@@ -138,5 +179,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+
+    <!-- Script caja de comentarios -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Fin script caja de comentarios -->
 </body>
-</html>s
+</html>
