--- a/views/index.html
+++ b/views/index.html
@@ -38,7 +38,7 @@
                 <li>
                     <a href="/views/damas.html">Damas</a>
                     <ul class="submenu">
-                        <li><a href="/views/construccion.html">Opción 1</a></li>
+                        <li><a href="/views/construccion.html">Opción </a></li>
                         <li><a href="/views/construccion.html">Opción 2</a></li>
                     </ul>
                 </li>
