--- a/styles/Mapa.css
+++ b/styles/Mapa.css
@@ -147,6 +147,15 @@ table {
     align-items: center;
 }
 
+.table a {
+    text-decoration: none;
+    color: black;
+}
+
+.table a:hover {
+    color: darkgreen;
+}
+
 #id {
     display: flex;
     justify-content: center;
