inicio de sesion

--- a/views/index.html
+++ b/views/index.html
@@ -63,6 +63,9 @@
                         Registro
                     </button>
                 </li>   
+                <button onclick="window.location.href='/views/sesion.html';" class="btn btn-outline-dark">
+                    Iniciar Sesion
+                </button>
             </ul>
 
         
