inicio en todos los menus

--- a/views/ofertas.html
+++ b/views/ofertas.html
@@ -64,6 +64,11 @@
                         Registro
                     </button>
                 </li>
+                <li> 
+                    <button onclick="window.location.href='/views/sesion.html';" class="btn btn-outline-dark">
+                        Iniciar Sesion
+                    </button>
+                </li>
             </ul>
         </nav>
         
