--- a/views/caballeros.html
+++ b/views/caballeros.html
@@ -63,6 +63,12 @@
                         Registro
                     </button>
                 </li>
+                <li> 
+                    <button onclick="window.location.href='/views/sesion.html';" class="btn btn-outline-dark">
+                        Iniciar Sesion
+                    </button>
+                </li>
+                </ul>
             </ul>
         </nav>
 
