CAMBIOS MAPA DE SITIO

--- a/views/caballeros.html
+++ b/views/caballeros.html
@@ -17,37 +17,33 @@
             <ul class="menu" id="menu">
                 <li>
                     <a href="/views/index.html">Inicio</a>
-                    <ul class="submenu">
-                        <li><a href="/views/construccion.html">Opción 1</a></li>
-                        <li><a href="/views/construccion.html">Opción 2</a></li>
-                    </ul>
                 </li>
                 <li>
                     <a href="/views/ofertas.html">Ofertas</a>
                     <ul class="submenu">
-                        <li><a href="/views/construccion.html">Opción 1</a></li>
-                        <li><a href="/views/construccion.html">Opción 2</a></li>
+                        <li><a href="/views/construccion.html">Nautica Voyage</a></li>
+                        <li><a href="/views/construccion.html">Versace Bright Crystal</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="/views/productosNuevos.html">Novedades</a>
                     <ul class="submenu">
-                        <li><a href="/views/construccion.html">Opción 1</a></li>
-                        <li><a href="/views/construccion.html">Opción 2</a></li>
+                        <li><a href="/views/construccion.html">YSL MYSELF</a></li>
+                        <li><a href="/views/construccion.html">Bvlgari Allegra Chill & Sole</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="/views/damas.html">Damas</a>
                     <ul class="submenu">
-                        <li><a href="/views/construccion.html">Opción 1</a></li>
-                        <li><a href="/views/construccion.html">Opción 2</a></li>
+                        <li><a href="/views/construccion.html">Calvin Klein Beauty</a></li>
+                        <li><a href="/views/construccion.html">Miss Dior</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="/views/caballeros.html">Caballeros</a>
                     <ul class="submenu">
-                        <li><a href="/views/construccion.html">Opción 1</a></li>
-                        <li><a href="/views/construccion.html">Opción 2</a></li>
+                        <li><a href="/views/construccion.html">Hawa ICE</a></li>
+                        <li><a href="/views/construccion.html">Stronger With You Intensely</a></li>
                     </ul>
                 </li>
                 <li>
@@ -68,7 +64,6 @@
                         Iniciar Sesion
                     </button>
                 </li>
-                </ul>
             </ul>
         </nav>
 
