--- a/views/index.html
+++ b/views/index.html
@@ -21,29 +21,29 @@
                 <li>
                     <a href="/views/ofertas.html">Ofertas</a>
                     <ul class="submenu">
-                        <li><a href="/views/construccion.html">Opción 1</a></li>
-                        <li><a href="/views/construccion.html">Opción 2</a></li>
+                        <li><a href="/views/construccion.html">Nautica Voyage</a></li>
+                        <li><a href="/views/construccion.html">Versace Bright Crystal</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="/views/productosNuevos.html">Novedades</a>
                     <ul class="submenu">
-                        <li><a href="/views/construccion.html">Opción 1</a></li>
-                        <li><a href="/views/construccion.html">Opción 2</a></li>
+                        <li><a href="/views/construccion.html">YSL MYSELF</a></li>
+                        <li><a href="/views/construccion.html">Bvlgari Allegra Chill & Sole</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="/views/damas.html">Damas</a>
                     <ul class="submenu">
-                        <li><a href="/views/construccion.html">Opción </a></li>
-                        <li><a href="/views/construccion.html">Opción 2</a></li>
+                        <li><a href="/views/construccion.html">Calvin Klein Beauty</a></li>
+                        <li><a href="/views/construccion.html">Miss Dior</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="/views/caballeros.html">Caballeros</a>
                     <ul class="submenu">
-                        <li><a href="/views/construccion.html">Opción 1</a></li>
-                        <li><a href="/views/construccion.html">Opción 2</a></li>
+                        <li><a href="/views/construccion.html">Hawa ICE</a></li>
+                        <li><a href="/views/construccion.html">Stronger With You Intensely</a></li>
                     </ul>
                 </li>
                 <li>
@@ -58,14 +58,13 @@
                     <button onclick="window.location.href='/views/Formulario.html';" class="btn btn-outline-dark">
                         Registro
                     </button>
-                </li>   
-                <button onclick="window.location.href='/views/sesion.html';" class="btn btn-outline-dark">
-                    Iniciar Sesion
-                </button>
+                </li>
+                <li> 
+                    <button onclick="window.location.href='/views/sesion.html';" class="btn btn-outline-dark">
+                        Iniciar Sesion
+                    </button>
+                </li>
             </ul>
-
-        
-            
         </nav>
 
         
