--- a/views/caballeros.html
+++ b/views/caballeros.html
@@ -30,6 +30,7 @@
                     <ul class="submenu">
                         <li><a href="/viewsPerfumes/myslf.html">YSL MYSELF</a></li>
                         <li><a href="/viewsPerfumes/bvl-alle.html">Bvlgari Allegra Chill & Sole</a></li>
+                    </ul>
                 </li>
                 <li>
                     <a href="/views/damas.html">Damas</a>
@@ -167,7 +168,7 @@
                     <li><a href="/viewsFooter/politica.html">Politica de Empresa</a></li>
                     <li><a href="/viewsFooter/terminos.html">Terminos y Condiciones</a></li>
                     <li><a href="/viewsFooter/carrera.html">Carrera</a></li>
-                    <li><a href="/viewsFooter/menusitio.html">Menu de Sitio</a></li>
+                    <li><a href="/viewsFooter/menusitio.html">Mapa de Sitio</a></li>
                 </ul>
             </ul>
         </div>
