--- a/views/ofertas.html
+++ b/views/ofertas.html
@@ -161,7 +161,7 @@
                     <li><a href="/viewsFooter/politica.html">Politica de Empresa</a></li>
                     <li><a href="/viewsFooter/terminos.html">Terminos y Condiciones</a></li>
                     <li><a href="/viewsFooter/carrera.html">Carrera</a></li>
-                    <li><a href="/viewsFooter/menusitio.html">Menu de Sitio</a></li>
+                    <li><a href="/viewsFooter/menusitio.html">Mapa de Sitio</a></li>
                 </ul>
             </ul>
         </div>
