--- a/views/construccion.html
+++ b/views/construccion.html
@@ -34,16 +34,24 @@
                 <li>
                     <a href="/views/damas.html">Damas</a>
                     <ul class="submenu">
-                        <li><a href="/views/construccion.html">Opción 1</a></li>
-                        <li><a href="/views/construccion.html">Opción 2</a></li>
+                        <li><a href="/viewsPerfumes/kal-klein.html">Calvin Klein Beauty</a></li>
+                        <li><a href="/viewsPerfumes/miss-dior.html">Miss Dior</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="/views/caballeros.html">Caballeros</a>
                     <ul class="submenu">
-                        <li><a href="/views/construccion.html">Opción 1</a></li>
-                        <li><a href="/views/construccion.html">Opción 2</a></li>
+                        <li><a href="/viewsPerfumes/hawa-ice.html">Hawa ICE</a></li>
+                        <li><a href="/viewsPerfumes/str-with.html">Stronger With You Intensely</a></li>
                     </ul>
+                </li>
+                <li>
+                    <div class="search">
+                        <form action="/views/construccion.html">
+                            <input type="text" placeholder="Buscar..." name="search">
+                            <button type="submit">Buscar</button>
+                        </form>
+                    </div> 
                 </li>
                 <li> 
                     <button onclick="window.location.href='/views/Formulario.html';" class="btn btn-outline-dark">
